--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -87,6 +87,9 @@
               <a class="nav-link" href="{{url_for('main.bookSearch_index')}}">BookSearch</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{{url_for('main.company_index')}}">CompanySearch</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{{url_for('main.capsule_index')}}">Capsule</a>
             </li>
             <li class="nav-item">
